--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,9 @@
   "name": "Java",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/java:1-21-bullseye",
+  "forwardPorts": [
+    8080
+  ],
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
       "version": "none",
